--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <!--单元测试-->
         <junit-version>4.8.2</junit-version>
         <!--shiro-->
-        <shiro-spring-version>1.3.2</shiro-spring-version>
+        <shiro-version>1.3.2</shiro-version>
         <!--httpClient-->
         <httpClient-version>4.5.6</httpClient-version>
         <!-- oauth -->
@@ -294,7 +294,12 @@
                 <artifactId>org.apache.oltu.oauth2.client</artifactId>
                 <version>${oauth-version}</version>
             </dependency>
-
+            <!--shiro-->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-core</artifactId>
+                <version>${shiro-version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
