--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <mybatis-version>1.3.2</mybatis-version>
         <mybatis-generator-version>1.3.5</mybatis-generator-version>
         <!--日志-->
-        <slfj4j-version>1.7.16</slfj4j-version>
+        <slf4j-version>1.7.16</slf4j-version>
         <lombok.version>1.16.18</lombok.version>
         <logstash-logback-encoder-version>4.11</logstash-logback-encoder-version>
         <!--swagger-->
