--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,7 @@
         <mybatis-version>1.3.2</mybatis-version>
         <mybatis-generator-version>1.3.5</mybatis-generator-version>
         <!--日志-->
-        <slf4j-version>1.7.16</slf4j-version>
-        <lombok.version>1.16.18</lombok.version>
+        <lombok.version>1.18.2</lombok.version>
         <logstash-logback-encoder-version>4.11</logstash-logback-encoder-version>
         <!--swagger-->
         <swagger2-version>2.6.1</swagger2-version>
@@ -60,6 +59,10 @@
         <httpClient-version>4.5.6</httpClient-version>
         <!-- oauth -->
         <oauth-version>1.0.2</oauth-version>
+        <!-- fastdfs-->
+        <fdfs-version>1.27-SNAPSHOT</fdfs-version>
+        <!--一个好用的工具类-->
+        <hutool-version>4.0.12</hutool-version>
     </properties>
 
     <dependencyManagement>
@@ -300,6 +303,24 @@
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-core</artifactId>
                 <version>${shiro-version}</version>
+            </dependency>
+            <!--fastdfs-->
+            <dependency>
+                <groupId>org.csource</groupId>
+                <artifactId>fastdfs-client-java</artifactId>
+                <version>${fdfs-version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!--一个好用的工具类-->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
