--- a/my-manage/src/main/resources/application.yml
+++ b/my-manage/src/main/resources/application.yml
@@ -8,21 +8,14 @@ spring:
   application:
     name: "manage"
   datasource:
-    url: jdbc:mysql://192.168.138.101:3306/cas?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://10.60.0.54:3306/labsys1?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1234
-  redis:
-    database: 0
-    host: 192.168.138.101
-    port: 6379
-    timeout: 0
-    jedis:
-      pool:
-        max-active: 8
-        max-wait: -1
-        max-idle: 8
-        min-idle: 0
+    password: root
+  servlet:
+    multipart:
+      max-request-size: 1024MB
+      max-file-size: 1024MB
 mybatis:
   configuration:
     call-setters-on-nulls: true
