--- a/my-utils/src/main/resources/redis.properties
+++ b/my-utils/src/main/resources/redis.properties
@@ -1,7 +1,8 @@
-redis.host=192.168.138.101
+redis.host=10.170.130.68
 redis.port=6379
-redis.password=
+redis.password=labsys
 redis.maxTotal=8
 redis.maxIdle=8
 redis.maxWaitMillis=-1
 redis.testOnBorrow=true
+redis.timeOut=5000
