--- a/my-manage/pom.xml
+++ b/my-manage/pom.xml
@@ -90,6 +90,10 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
