--- a/zuul-filter/pom.xml
+++ b/zuul-filter/pom.xml
@@ -54,8 +54,20 @@
             <scope>test</scope>
         </dependency>
 
-
+        <!--集成elk-->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
