--- a/my-manage/src/main/resources/application.yml
+++ b/my-manage/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl: #注册中心的注册地址
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://192.168.138.251:8761/eureka/
 server:
   port: 9088
 spring:
