--- a/my-eureka/src/main/resources/application.yml
+++ b/my-eureka/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
     eviction-interval-timer-in-ms: 5000
     use-read-only-response-cache: false
   instance:
-    prefer-ip-address: true
+    prefer-ip-address: false
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
     hostname: eureka
