--- a/zuul-filter/src/main/resources/application.yml
+++ b/zuul-filter/src/main/resources/application.yml
@@ -2,15 +2,21 @@ eureka:
   client:
     serviceUrl: #注册中心的注册地址
       defaultZone: http://127.0.0.1:8761/eureka/
+  instance:
+    prefer-ip-address: true
 server:
   port: 9084
+  tomcat:
+    uri-encoding: UTF-8
+    max-threads: 1000
+    min-spare-threads: 30
 spring:
   application:
     name: "zuul"
   servlet:
     multipart:
-      max-request-size: 1024MB
-      max-file-size: 1024MB
+      max-request-size: 5MB
+      max-file-size: 5MB
 #  datasource:
 #    url: jdbc:mysql://10.60.0.54/labsys1?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
 #    driverClassName: com.mysql.cj.jdbc.Driver
@@ -24,16 +30,8 @@ spring:
 zuul:
   routes:
     api-a:
-      path: /zuul/**
-      serviceId: zuul
-      sensitive-headers:
-      custom-sensitive-headers: true
-    api-b:
       path: /manage/**
       serviceId: "manage"
-#    resource-admin:
-#      path: /admin/**
-#      serviceId: cloud-ida-admin
 hystrix:
   command:
     default:
